--- a/hera-1.html
+++ b/hera-1.html
@@ -3,13 +3,13 @@
 <head>
 	<meta charset="UTF-8"/>
 	<title>HERA INITIATIVE</title>
-	<link rel='stylesheet' href='hera_styles-1.css' type='text/css'/>
+	<link rel='stylesheet' href='hera_styles.css' type='text/css'/>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
 </head>
 <body>
 	<div class="first">
 		<div class='intro_image'/>
-			<img src="images/main_girl.jpg"/>
+			<img src="main_girl.jpg"/>
 			<div class='logo'>
 				<link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
 				<h1>HERA INITIATIVE</h1>
@@ -18,7 +18,7 @@
 				<div class= "facebook"/>
 					<div class="facebook_image">
 						<a href="https://www.facebook.com/herainitiative/" target="_blank">
-						<img src="images/facebook.png"/>
+						<img src="facebook.png"/>
 						</a>
 				<!-- <h1>Find us on Facebook</h1> -->
 				</div>
@@ -27,7 +27,7 @@
 				<div class="instagram">
 					<div class="insta_image"/>
 						<a href="https://www.instagram.com/herainitiative/" target="_blank">
-						<img src="images/instagram.png"/>
+						<img src="instagram.jpg"/>
 						</a>
 					<!-- <h1>Find us on Instagram</h1> -->
 				</div>
@@ -46,7 +46,7 @@
 		<p>Check us out on Facebook!</p>
 		</div> -->
 	</div>
-	<div class="about">
+	<div id="about" class="about">
 		<div class="about_title">
 			<h1>OUR MISSION</h1>
 		</div>
@@ -83,18 +83,18 @@
 		</div>
 		<div class = "collage">
 			<div class = "picture1">
-				<img src="images/boograms.jpg"/>
+				<img src="boograms.jpg"/>
 			</div>
 			<div class = "picture2">
-				<img src="images/gala_masks.jpg"/>
+				<img src="gala_masks.jpg"/>
 			</div>
 			<div class = "picture3">
-				<img src="images/gala_group.png"/>
+				<img src="gala_group.png"/>
 			</div>
 		</div>
 	</div>
 	<div class="donate_div">
-		<img src="images/group.jpg">
+		<img src="group.jpg">
 		<div class="donate_title">
 			<h1>DONATE</h1>
 		</div>
@@ -112,7 +112,7 @@
 			<h1> CONTACT US </h1>
 		</div>
 		<div class="team_image">
-			<img src="images/rotunda_group.png"/>
+			<img src="rotunda_group.png"/>
 		</div>
 		<div class="container">
 			<h2>Contact Form</h2>
